[package]
name = "fbthrift-transport"
version = "0.4.1"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "fbthrift transport."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/fbthrift-transport"
homepage = "https://github.com/bk-rs/fbthrift-transport"
documentation = "https://docs.rs/fbthrift-transport"
keywords = []
categories = []
readme = "README.md"

[features]
futures_io = ["futures-x-io/futures_util_io", "futures-x-io-timeoutable/futures_io"]
tokio_io = ["futures-x-io/tokio_io_util", "futures-x-io-timeoutable/tokio_io"]

[dependencies]
fbthrift = { version = "0.0.3", default-features = false, features = [], package = "fbthrift-git" }
cfg-if = { version = "0.1", default-features = false, features = [] }
bytes = { version = "0.5", default-features = false, features = [] }
anyhow = { version = "1.0", default-features = false, features = [] }
futures-core = { version = "0.3", default-features = false, features = [] }

fbthrift-transport-response-handler = { path = "response-handler", version = "0.4" }

futures-x-io = { version = "0.1", default-features = false, features = [], optional = true }
futures-x-io-timeoutable = { version = "0.1", default-features = false, features = [], optional = true }

[dev-dependencies]
futures-lite = { version = "1.8"}

[workspace]
members = [
    "response-handler",
]
