[package]
name = "fbthrift-transport"
version = "0.7.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "fbthrift transport."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/fbthrift-transport"
homepage = "https://github.com/bk-rs/fbthrift-transport"
documentation = "https://docs.rs/fbthrift-transport"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
# default = ["tokio_io"]
futures_io = ["futures-x-io/futures_util_io", "futures-x-io-timeoutable/futures_io"]
tokio_io = ["futures-x-io/tokio_io_util", "futures-x-io-timeoutable/tokio_io"]

[dependencies]
fbthrift-transport-response-handler = { version = "0.5", path = "../fbthrift-transport-response-handler" }

fbthrift = { version = "=0.0.6", default-features = false, package = "fbthrift-git" }
bytes = { version = "0.5", default-features = false }
anyhow = { version = "1", default-features = false }
const-cstr = { version = "0.3", default-features = false }

futures-core = { version = "0.3", default-features = false }

futures-x-io = { version = "0.3", default-features = false, optional = true }
futures-x-io-timeoutable = { version = "0.3", default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["net", "rt-multi-thread", "rt"] }

futures-lite = { version = "1" }
async-io = { version = "1" }
async-executor = { version = "1" }

[package.metadata.cargo-all-features]
skip_feature_sets = [
    ["futures_io", "tokio_io"],
]
skip_optional_dependencies = true
