[package]
name = "fbthrift-transport"
version = "0.7.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "fbthrift transport."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/fbthrift-transport"
homepage = "https://github.com/bk-rs/fbthrift-transport"
documentation = "https://docs.rs/fbthrift-transport"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["impl_tokio", "impl_async_io"]

impl_tokio = ["tokio", "async-compat", "async-sleep/impl_tokio"]
impl_async_io = ["async-io", "async-sleep/impl_async_io"]

[dependencies]
fbthrift-transport-response-handler = { version = "0.5", path = "../fbthrift-transport-response-handler" }

fbthrift = { version = "=0.0.6", default-features = false, package = "fbthrift-git" }
bytes = { version = "0.5", default-features = false }
anyhow = { version = "1", default-features = false }
const-cstr = { version = "0.3", default-features = false }

futures-util = { version = "0.3", default-features = false, features = ["io"] }
async-sleep = { version = "0.3", default-features = false, features = ["timeout"] }

tokio = { version = "1", default-features = false, features = ["net"], optional = true }
async-compat = { version = "0.2", default-features = false, optional = true }
async-io = { version = "1", default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

futures-lite = { version = "1" }
async-executor = { version = "1" }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
